# flacifly

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  PROGRESS.md  README.md  ROADMAP.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
core/: README.md  pyproject.toml
core/src/core/: __init__.py  config.py  db.py  exit_codes.py  locking.py  logging.py  types_.py
core/tests/: conftest.py  test_db.py  test_locking.py  test_logging.py
dedup/: README.md
etc/: targets.conf  ytdlp.conf
etc/systemd/: flacifly.service  flacifly.timer
fetcher/: README.md  pyproject.toml
fetcher/src/fetcher/: __init__.py  cli.py  config.py  downloader.py  exit_codes.py  main.py  transcode.py  types_.py  ytdlp_adapter.py
fetcher/tests/: test_downloader.py  test_fetch_cli.py  test_integration.py  test_transcode.py  test_ytdlp_adapter.py
tagger/: README.md  pyproject.toml
tagger/src/tagger/: __init__.py  cli.py  config.py  exit_codes.py  identify.py  main.py  review.py  tagging.py  tags.py  types_.py
tagger/src/tagger/resolvers/: __init__.py
tagger/tests/: conftest.py  test_identify.py  test_review.py  test_tag_cli.py  test_tagging.py  test_tags.py
tagger/tests/fixtures/: silence.flac
