[project]
name = "flacifly"
version = "0.1.0"
description = "Download best-quality audio (YouTube / YT Music / SoundCloud), transcode to FLAC, and tag it."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "core",
    "fetcher",
    "tagger",
]

[tool.uv.sources]
core = { workspace = true }
fetcher = { workspace = true }
tagger = { workspace = true }

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
